<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Email">

    <EditText
        android:id="@+id/destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/destinatarios"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/subjiect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        />

    <EditText
        android:id="@+id/mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Mensagem"
        android:padding="80dp"
        />

    <Button
        android:id="@+id/enviaremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        />

</LinearLayout>